Update 'go-icuyuved' component image to: quay.io/rhtap_qe/go-icuyuved:dc0549b53bc78ef87dcb1c345918cc9c37303a40@sha256:8b67d1926a82bd270bb8ea0f1c037f50d56efe43a9a7445b6eba35561ff97600

--- a/components/go-icuyuved/overlays/development/deployment-patch.yaml
+++ b/components/go-icuyuved/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-icuyuved
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-icuyuved:dc0549b53bc78ef87dcb1c345918cc9c37303a40@sha256:8b67d1926a82bd270bb8ea0f1c037f50d56efe43a9a7445b6eba35561ff97600
+          name: container-image
